--- a/src/app/elements/elementshome/elementshome.component.html
+++ b/src/app/elements/elementshome/elementshome.component.html
@@ -1,1 +1,13 @@
-<p>elementshome works!</p>
+<app-divider>
+    PlaceHolderComponent
+</app-divider>
+
+<app-place-holder [header]="false" [lines]="8"></app-place-holder>
+
+<app-segment>
+    <header>
+        <i class="pdf file outline icon"></i>
+      No documents are listed for this customer.
+    </header>
+    <div class="ui yellow button">Add Document</div>
+</app-segment>
