--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,7 @@
 <div class="ui pointing menu">
     <a class ="item" routerLinkActive="active"    [routerLink]="['/collections']">collections</a>
     <a class ="item" routerLinkActive="active"    routerLink="/elements">elements</a>
+    <a class ="item" routerLinkActive="active"    routerLink="/views">views</a>
     <div class="right menu">
       <div class="item">
         <div class="ui transparent icon input">
