--- a/src/app/collections/collectionhome/collectionhome.component.html
+++ b/src/app/collections/collectionhome/collectionhome.component.html
@@ -1,26 +1,27 @@
-<app-divider>TableComponent</app-divider>
-
-<app-table [data] = "data" [header]= "header" [classname]= "'celled'"></app-table>
-
-<app-divider>TabComponent</app-divider>
+<app-divider>
+    Table Component
+</app-divider>
+<app-table [data]="data" [header]="header" [className]="'celled'"></app-table>
+<app-divider>
+    Tab Component
+</app-divider>
 <div class="ui grid">
     <div class="four wide column">
-      <div class="ui vertical fluid tabular menu">
-        <a class="active item">
-          Bio
-        </a>
-        <a class="item">
-          Pics
-        </a>
-        <a class="item">
-          Companies
-        </a>
-      </div>
+        <div class="ui vertical fluid tabular menu">
+            <a [routerLink]="'./'"  [routerLinkActiveOptions]="{exact:true}" routerLinkActive="active" class="item">
+                Bio
+            </a>
+            <a [routerLink]="[pathCompanies]" routerLinkActive="active" class="item">
+                Companies
+            </a>
+            <a routerLink="partners" routerLinkActive="active" class="item">
+                Partners
+            </a>
+        </div>
     </div>
     <div class="twelve wide stretched column">
-      <div class="ui segment">
-        This is an stretched grid column. This segment will always match the tab height
-      </div>
+        <div class="ui segment">
+            <router-outlet></router-outlet>
+        </div>
     </div>
-  </div>
-<router-outlet></router-outlet>
+</div>
