added accordion component

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,6 +2,8 @@
     <a class ="item" routerLinkActive="active"    [routerLink]="['/collections']">collections</a>
     <a class ="item" routerLinkActive="active"    routerLink="/elements">elements</a>
     <a class ="item" routerLinkActive="active"    routerLink="/views">views</a>
+    <a class ="item" routerLinkActive="active"    routerLink="/mods">Moduls</a>
+
     <div class="right menu">
       <div class="item">
         <div class="ui transparent icon input">
